--- a/Front/TvShowsAngular/src/app/components/user/user.component.html
+++ b/Front/TvShowsAngular/src/app/components/user/user.component.html
@@ -1,5 +1,13 @@
 <div class="row">
   <div class="col-12">
+    <button type="button" class="btn btn-primary" [routerLink]="['/tv-show-create']">
+      <i class="bi bi-plus-circle"></i> Nuevo
+    </button>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
     <table class="table table-striped table-hover">
       <thead>
         <tr>
@@ -9,8 +17,8 @@
           <th scope="col">Action</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let user of users.data; let i = index">
+      <tbody *ngIf="users.length > 0 && !isLoading">
+        <tr *ngFor="let user of users; let i = index">
           <th scope="row">{{ i + 1 }}</th>
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
@@ -32,7 +40,14 @@
       </tbody>
     </table>
 
-    <div *ngIf="users.data.length === 0">
+    <!-- Indicador de carga -->
+    <div *ngIf="isLoading" class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+
+    <div *ngIf="users.length === 0">
       <p>No users available.</p>
     </div>
 
