--- a/Front/TvShowsAngular/src/app/components/login/login.component.html
+++ b/Front/TvShowsAngular/src/app/components/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="container mt-4">
+  <h2>Iniciar Sesión</h2>
+  <form (ngSubmit)="login()">
+    <div class="mb-3">
+      <label for="email" class="form-label">Correo Electrónico</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        [(ngModel)]="email"
+        name="email"
+        required
+      />
+    </div>
+
+    <div class="mb-3">
+      <label for="password" class="form-label">Contraseña</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        [(ngModel)]="password"
+        name="password"
+        required
+      />
+    </div>
+
+    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+    <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+      {{ errorMessage }}
+    </div>
+  </form>
+</div>
